2020-11-02 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Automatic (default) and dual approximation in qalc

2020-10-30 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Always place unit with prefix first

2020-10-29 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Use Unicode symbols for >=, <=, and != in function argument description and function condition (in qalc and defs2doc)

2020-10-28 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Automatic (default) and dual fractions options, in qalc, which shows simple, mixed, and/or decimal fractions depending on format and contents of expression and result

2020-10-25 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix quoted degree symbol in function argument (e.g. code("°"))

2020-10-23 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Support for different character encodings in code() function
	* Fix Unicode number base (multiply with 2^32 for each position)
	* Fix default separator in load() and export()
	* Always perform conversion to optimal (SI) unit when the expression is a number multiplied by a unit and input equals output

2020-10-22 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Add matrix rank (rk) and reduced row echelon form (rref) functions
	* Add support for d/dx notation for derivatives, e.g. d/dx sin(x) = diff(sin(x))

2020-10-20 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Replace variables with corresponding units (e.g. c with c_unit) in unit expressions

2020-10-18 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix date/time output includes (wrong) decimals (zeroes) in some cases (e.g. with nextlunarphase())
	* Improve handling of ignore comma/dot option outside of calculated expression in qalc
	* Set arguments for comb() and perm() as positive integers

2020-10-16 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Support for Unicode quotation marks
	* Improved Unicode fraction handling

2020-10-15 Hanna Knutsson <hanna.knutsson@protonmail.com>
